docs/api/qiskit/0.25/qiskit.chemistry.algorithms.VQEUCCSDFactory.mdx
---
title: VQEUCCSDFactory
description: API reference for qiskit.chemistry.algorithms.VQEUCCSDFactory
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.VQEUCCSDFactory
---

# qiskit.chemistry.algorithms.VQEUCCSDFactory

<Class id="qiskit.chemistry.algorithms.VQEUCCSDFactory" github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/ground_state_solvers/minimum_eigensolver_factories/vqe_uccsd_factory.py" signature="VQEUCCSDFactory(quantum_instance, optimizer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, method_singles='both', method_doubles='ucc', excitation_type='sd', same_spin_doubles=True)">
  A factory to construct a VQE minimum eigensolver with UCCSD ansatz wavefunction.

  **Parameters**

  *   **quantum\_instance** (`QuantumInstance`) – The quantum instance used in the minimum eigensolver.
  *   **optimizer** (`Optional`\[`Optimizer`]) – A classical optimizer.
  *   **initial\_point** (`Optional`\[`ndarray`]) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQE will look to the variational form for a preferred point and if not will simply compute a random one.
  *   **gradient** (`Union`\[`GradientBase`, `Callable`, `None`]) – An optional gradient function or operator for optimizer.
  *   **expectation** (`Optional`\[`ExpectationBase`]) – The Expectation converter for taking the average value of the Observable over the var\_form state function. When `None` (the default) an [`ExpectationFactory`](qiskit.aqua.operators.expectations.ExpectationFactory "qiskit.aqua.operators.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to `True` (defaults to `False`).
  *   **include\_custom** (`bool`) – When expectation parameter here is None setting this to `True` will allow the factory to include the custom Aer pauli expectation.
  *   **method\_singles** (`str`) – specify the single excitation considered. ‘alpha’, ‘beta’, ‘both’ only alpha or beta spin-orbital single excitations or both (all of them).
  *   **method\_doubles** (`str`) – specify the single excitation considered. ‘ucc’ (conventional ucc), succ (singlet ucc), succ\_full (singlet ucc full), pucc (pair ucc).
  *   **excitation\_type** (`str`) – specify the excitation type ‘sd’, ‘s’, ‘d’ respectively for single and double, only single, only double excitations.
  *   **same\_spin\_doubles** (`bool`) – enable double excitations of the same spin.

  ### \_\_init\_\_

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.__init__" name="__init__" signature="__init__(quantum_instance, optimizer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, method_singles='both', method_doubles='ucc', excitation_type='sd', same_spin_doubles=True)">
    **Parameters**

    *   **quantum\_instance** (`QuantumInstance`) – The quantum instance used in the minimum eigensolver.
    *   **optimizer** (`Optional`\[`Optimizer`]) – A classical optimizer.
    *   **initial\_point** (`Optional`\[`ndarray`]) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQE will look to the variational form for a preferred point and if not will simply compute a random one.
    *   **gradient** (`Union`\[`GradientBase`, `Callable`, `None`]) – An optional gradient function or operator for optimizer.
    *   **expectation** (`Optional`\[`ExpectationBase`]) – The Expectation converter for taking the average value of the Observable over the var\_form state function. When `None` (the default) an [`ExpectationFactory`](qiskit.aqua.operators.expectations.ExpectationFactory "qiskit.aqua.operators.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to `True` (defaults to `False`).
    *   **include\_custom** (`bool`) – When expectation parameter here is None setting this to `True` will allow the factory to include the custom Aer pauli expectation.
    *   **method\_singles** (`str`) – specify the single excitation considered. ‘alpha’, ‘beta’, ‘both’ only alpha or beta spin-orbital single excitations or both (all of them).
    *   **method\_doubles** (`str`) – specify the single excitation considered. ‘ucc’ (conventional ucc), succ (singlet ucc), succ\_full (singlet ucc full), pucc (pair ucc).
    *   **excitation\_type** (`str`) – specify the excitation type ‘sd’, ‘s’, ‘d’ respectively for single and double, only single, only double excitations.
    *   **same\_spin\_doubles** (`bool`) – enable double excitations of the same spin.
  </Function>

  ## Methods

  |                                                                                                                                                                        |                                                                                         |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.__init__ "qiskit.chemistry.algorithms.VQEUCCSDFactory.__init__")(quantum\_instance\[, optimizer, …])         | **type quantum\_instance**`QuantumInstance`                                             |
  | [`get_solver`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.get_solver "qiskit.chemistry.algorithms.VQEUCCSDFactory.get_solver")(transformation)                       | Returns a VQE with a UCCSD wavefunction ansatz, based on `transformation`.              |
  | [`supports_aux_operators`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.supports_aux_operators "qiskit.chemistry.algorithms.VQEUCCSDFactory.supports_aux_operators")() | Returns whether the eigensolver generated by this factory supports auxiliary operators. |

  ## Attributes

  |                                                                                                                                                       |                                                                                |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
  | [`excitation_type`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.excitation_type "qiskit.chemistry.algorithms.VQEUCCSDFactory.excitation_type")       | Getter of the `excitation_type` setting for the `excitation_type` setting.     |
  | [`expectation`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.expectation "qiskit.chemistry.algorithms.VQEUCCSDFactory.expectation")                   | Getter of the expectation.                                                     |
  | [`gradient`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.gradient "qiskit.chemistry.algorithms.VQEUCCSDFactory.gradient")                            | Getter of the gradient function                                                |
  | [`include_custom`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.include_custom "qiskit.chemistry.algorithms.VQEUCCSDFactory.include_custom")          | Getter of the `include_custom` setting for the `expectation` setting.          |
  | [`initial_point`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.initial_point "qiskit.chemistry.algorithms.VQEUCCSDFactory.initial_point")             | Getter of the initial point.                                                   |
  | [`method_doubles`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.method_doubles "qiskit.chemistry.algorithms.VQEUCCSDFactory.method_doubles")          | Getter of the `method_doubles` setting for the `method_doubles` setting.       |
  | [`method_singles`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.method_singles "qiskit.chemistry.algorithms.VQEUCCSDFactory.method_singles")          | Getter of the `method_singles` setting for the `method_singles` setting.       |
  | [`optimizer`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.optimizer "qiskit.chemistry.algorithms.VQEUCCSDFactory.optimizer")                         | Getter of the optimizer.                                                       |
  | [`quantum_instance`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.quantum_instance "qiskit.chemistry.algorithms.VQEUCCSDFactory.quantum_instance")    | Getter of the quantum instance.                                                |
  | [`same_spin_doubles`](#qiskit.chemistry.algorithms.VQEUCCSDFactory.same_spin_doubles "qiskit.chemistry.algorithms.VQEUCCSDFactory.same_spin_doubles") | Getter of the `same_spin_doubles` setting for the `same_spin_doubles` setting. |

  ### excitation\_type

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.excitation_type" name="excitation_type" signature="property excitation_type">
    Getter of the `excitation_type` setting for the `excitation_type` setting.

    **Return type**

    `str`
  </Function>

  ### expectation

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.expectation" name="expectation" signature="property expectation">
    Getter of the expectation.

    **Return type**

    `ExpectationBase`
  </Function>

  ### get\_solver

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.get_solver" name="get_solver" signature="get_solver(transformation)">
    Returns a VQE with a UCCSD wavefunction ansatz, based on `transformation`. This works only with a `FermionicTransformation`.

    **Parameters**

    **transformation** (`Transformation`) – a fermionic qubit operator transformation.

    **Return type**

    `MinimumEigensolver`

    **Returns**

    A VQE suitable to compute the ground state of the molecule transformed by `transformation`.

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – in case a Transformation of wrong type is given.
  </Function>

  ### gradient

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.gradient" name="gradient" signature="property gradient">
    Getter of the gradient function

    **Return type**

    `Union`\[`GradientBase`, `Callable`, `None`]
  </Function>

  ### include\_custom

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.include_custom" name="include_custom" signature="property include_custom">
    Getter of the `include_custom` setting for the `expectation` setting.

    **Return type**

    `bool`
  </Function>

  ### initial\_point

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.initial_point" name="initial_point" signature="property initial_point">
    Getter of the initial point.

    **Return type**

    `ndarray`
  </Function>

  ### method\_doubles

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.method_doubles" name="method_doubles" signature="property method_doubles">
    Getter of the `method_doubles` setting for the `method_doubles` setting.

    **Return type**

    `str`
  </Function>

  ### method\_singles

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.method_singles" name="method_singles" signature="property method_singles">
    Getter of the `method_singles` setting for the `method_singles` setting.

    **Return type**

    `str`
  </Function>

  ### optimizer

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.optimizer" name="optimizer" signature="property optimizer">
    Getter of the optimizer.

    **Return type**

    `Optimizer`
  </Function>

  ### quantum\_instance

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.quantum_instance" name="quantum_instance" signature="property quantum_instance">
    Getter of the quantum instance.

    **Return type**

    `QuantumInstance`
  </Function>

  ### same\_spin\_doubles

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.same_spin_doubles" name="same_spin_doubles" signature="property same_spin_doubles">
    Getter of the `same_spin_doubles` setting for the `same_spin_doubles` setting.

    **Return type**

    `bool`
  </Function>

  ### supports\_aux\_operators

  <Function id="qiskit.chemistry.algorithms.VQEUCCSDFactory.supports_aux_operators" name="supports_aux_operators" signature="supports_aux_operators()">
    Returns whether the eigensolver generated by this factory supports auxiliary operators.
  </Function>
</Class>

